--- a/notebooks/dengue_paper_analisys.ipynb
+++ b/notebooks/dengue_paper_analisys.ipynb
@@ -542,7 +542,10 @@
    "source": [
     "plt.figure(figsize=(7,7))\n",
     "options = {\"edgecolors\": \"tab:gray\", \"alpha\": 0.9}\n",
-    "nodes=nx.draw(g_colombia_TDC[-1], pos=nx.spring_layout(g_colombia_TDC[-1], seed = 120), with_labels=True, node_color='red', edge_color='gray', width=0.2, node_size=120, font_size=0, **options)\n",
+    "nodes=nx.draw(g_colombia_TDC[-1], \n",
+    "              pos=nx.spring_layout(g_colombia_TDC[-1], seed = 120), \n",
+    "              with_labels=True, node_color='red', edge_color='gray', \n",
+    "              width=0.2, node_size=120, font_size=0, **options)\n",
     "plt.title(\"Total of Dengue Cases (Colombia)\")\n",
     "plt.savefig(\"colombia_network.pdf\",dpi=400,bbox_inches='tight')\n",
     "plt.show()"
